Updated spacing for explainer, fixed diamond appearance on tablet devices, toned-down diamond animations

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2512,9 +2512,9 @@ input {
       // Each selectable diamond level in the diamond pop-up
       .reaction-icon {
         // Enables "pop-up" animation
-        transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        transition: all 0.3s cubic-bezier(.09,1.22,.5,1.04);
         opacity: 0;
-        transform: translate(0, 100px) scale(0);
+        transform: translate(0, 50px) scale(0);
         width: 40px; height: 40px;
         display: inline-block;
         background: var(--secondary);
@@ -2560,6 +2560,12 @@ input {
 
         .reaction-icon {
 
+          // Skip the "show" trigger on tablets, the on-hover property can be touchy
+          @media (min-width: 601px) and (pointer: coarse) {
+            opacity: 1;
+            transform: translate(0, 0) scale(1);
+          }
+
           &.show {
             opacity: 1;
             transform: translate(0, 0) scale(1);
@@ -2569,13 +2575,13 @@ input {
             // Prevent hover effects on mobile
             @media (pointer: fine) {
               &.dragged-icon,&:hover {
-                transform: scale(1.4);
+                transform: scale(1.3);
                 transform-origin: bottom;
               }
             }
             @media (pointer: coarse) {
               &.dragged-icon {
-                transform: scale(1.4);
+                transform: scale(1.3);
                 transform-origin: bottom;
               }
             }
@@ -2620,7 +2626,6 @@ input {
     left: 0;
     right: 0;
     background: var(--background);
-    //transition: background-color 0s linear 300ms;
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s linear 300ms, opacity 300ms, background-color 300ms ease;
